--- a/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
@@ -5,35 +5,39 @@ description = ""
 authors = ["Admin <admin@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-uvicorn = "^0.11.3"
-fastapi = "^0.54.1"
+python = "^3.10"
+uvicorn = "^0.18.3"
+fastapi = "^0.82.0"
 python-multipart = "^0.0.5"
-email-validator = "^1.0.5"
-requests = "^2.23.0"
-celery = "^4.4.2"
-passlib = {extras = ["bcrypt"], version = "^1.7.2"}
-tenacity = "^6.1.0"
-pydantic = "^1.4"
-emails = "^0.5.15"
+email-validator = "^1.2.1"
+requests = "^2.28.1"
+celery = "^5.2.7"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+tenacity = "^8.0.1"
+pydantic = "^1.10.2"
+emails = "^0.6"
 raven = "^6.10.0"
-gunicorn = "^20.0.4"
-jinja2 = "^2.11.2"
-psycopg2-binary = "^2.8.5"
-alembic = "^1.4.2"
-sqlalchemy = "^1.3.16"
-pytest = "^5.4.1"
-python-jose = {extras = ["cryptography"], version = "^3.1.0"}
+gunicorn = "^20.1.0"
+jinja2 = "^3.1.2"
+psycopg2-binary = "^2.9.3"
+alembic = "^1.8.1"
+sqlalchemy = "^1.4.40"
+pytest = "^7.1.3"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+sentry-sdk = "^1.12.1"
+asyncpg = "^0.27.0"
+pytest-asyncio = "^0.20.3"
+httpx = "^0.23.1"
 
 [tool.poetry.dev-dependencies]
-mypy = "^0.770"
-black = "^19.10b0"
-isort = "^4.3.21"
-autoflake = "^1.3.1"
-flake8 = "^3.7.9"
-pytest = "^5.4.1"
-sqlalchemy-stubs = "^0.3"
-pytest-cov = "^2.8.1"
+mypy = "^0.971"
+black = "^22.8.0"
+isort = "^5.10.1"
+autoflake = "^1.5.3"
+flake8 = "^5.0.4"
+pytest = "^7.1.3"
+sqlalchemy2-stubs = "^0.0.2a27"
+pytest-cov = "^3.0.0"
 
 [tool.isort]
 multi_line_output = 3
