--- a/{{cookiecutter.project_slug}}/frontend/Dockerfile
+++ b/{{cookiecutter.project_slug}}/frontend/Dockerfile
@@ -1,10 +1,13 @@
-FROM node:16 as build-stage-1
+# Stage 0, "build-stage", based on Node.js, to build and compile the frontend
+FROM node:18 as build-stage
 
 WORKDIR /app
 
-COPY ./  /app/
+COPY package*.json /app/
 
 RUN npm install
+
+COPY ./ /app/
 
 ARG FRONTEND_ENV=production
 
@@ -15,9 +18,11 @@ RUN npm run test:unit
 
 RUN npm run build
 
-# Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
-FROM nginx:1.15
 
-COPY --from=build-stage-1 /app/dist/ /usr/share/nginx/html
+# Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
+FROM nginx:1.22
+
+COPY --from=build-stage /app/dist/ /usr/share/nginx/html
+
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 COPY ./nginx-backend-not-found.conf /etc/nginx/extra-conf.d/backend-not-found.conf
