--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -1,5 +1,5 @@
-version: "3.3"
 services:
+
   proxy:
     image: traefik:v2.2
     networks:
@@ -89,6 +89,8 @@ services:
       - db
     env_file:
       - .env
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
     deploy:
       labels:
         - traefik.enable=true
@@ -104,9 +106,9 @@ services:
         - traefik.http.services.${STACK_NAME?Variable not set}-pgadmin.loadbalancer.server.port=5050
 
   queue:
-    image: rabbitmq:3
+    # image: rabbitmq:3
     # Using the below image instead is required to enable the "Broker" tab in the flower UI:
-    # image: rabbitmq:3-management
+    image: rabbitmq:3-management
     #
     # You also have to change the flower command
 
@@ -115,10 +117,17 @@ services:
     networks:
       - ${TRAEFIK_PUBLIC_NETWORK?Variable not set}
       - default
+    depends_on:
+      - queue
     env_file:
       - .env
     environment:
-      - CELERY_BROKER_URL=amqp://guest@queue:5672//
+      - CELERY_BROKER_URL=amqp://guest:guest@queue:5672//
+    # The sleep used below helps address https://github.com/mher/flower/issues/1112
+    command: /bin/sh -c "sleep 5s && celery flower --broker_api=http://guest:guest@queue:15672/api//"
+      # For the "Broker" tab to work in the flower UI, use the following command argument,
+      # and change the queue service's image as well
+      # --broker_api=http://guest:guest@queue:15672/api//
     deploy:
       labels:
         - traefik.enable=true
@@ -132,9 +141,9 @@ services:
         - traefik.http.routers.${STACK_NAME?Variable not set}-flower-https.tls=true
         - traefik.http.routers.${STACK_NAME?Variable not set}-flower-https.tls.certresolver=le
         - traefik.http.services.${STACK_NAME?Variable not set}-flower.loadbalancer.server.port=5555
-
+  
   backend:
-    image: "${DOCKER_IMAGE_BACKEND?Variable not set}:${TAG-latest}"
+    image: '${DOCKER_IMAGE_BACKEND?Variable not set}:${TAG-latest}'
     depends_on:
       - db
     env_file:
@@ -155,9 +164,9 @@ services:
         - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
         - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.rule=PathPrefix(`/api`) || PathPrefix(`/docs`) || PathPrefix(`/redoc`)
         - traefik.http.services.${STACK_NAME?Variable not set}-backend.loadbalancer.server.port=80
-
+  
   celeryworker:
-    image: "${DOCKER_IMAGE_CELERYWORKER?Variable not set}:${TAG-latest}"
+    image: '${DOCKER_IMAGE_CELERYWORKER?Variable not set}:${TAG-latest}'
     depends_on:
       - db
       - queue
@@ -173,9 +182,9 @@ services:
       dockerfile: celeryworker.dockerfile
       args:
         INSTALL_DEV: ${INSTALL_DEV-false}
-
+  
   frontend:
-    image: "${DOCKER_IMAGE_FRONTEND?Variable not set}:${TAG-latest}"
+    image: '${DOCKER_IMAGE_FRONTEND?Variable not set}:${TAG-latest}'
     build:
       context: ./frontend
       args:
@@ -189,6 +198,7 @@ services:
 
 volumes:
   app-db-data:
+  pgadmin-data:
 
 networks:
   traefik-public:
