--- a/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
@@ -39,11 +39,26 @@ pytest = "^7.1.3"
 sqlalchemy2-stubs = "^0.0.2a27"
 pytest-cov = "^3.0.0"
 
+[tool.black]
+line-length = 100
+include = '(mypy_boto3_builder|types_s3transfer|tests)/.*\.pyi?$'
+target-version = [
+    'py37',
+    'py38',
+    'py39',
+    'py310',
+    'py311',
+]
+
 [tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-line_length = 88
+profile = "black"
+line_length = 100
+known_first_party = [
+    "app",
+    "tests",
+]
+src_paths = []
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
