--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ black = "*"
 isort = "*"
 flake8 = "*"
 pytest = "*"
+pyyaml = "*"
 types-python-jose = "*"
 types-passlib = "*"
 celery-types = "*"
